# wasm-shim

./: CHANGELOG.md  Cargo.toml  RELEASE.md  build.rs  release-plz.toml
.github/actions/prepare-release/: action.yaml
.github/actions/setup-rust-wasm/: action.yaml
.github/workflows/: automated-release.yaml  build-image.yaml  e2e.yaml  issues-workflow.yaml  license-scan.yaml  release-plz.yaml  release.yaml  rust.yaml  sector-release.yaml  tests.yaml
src/: auth_action.rs  configuration.rs  lib.rs  ratelimit_action.rs  runtime_action.rs  runtime_action_set.rs  runtime_config.rs  service.rs
src/data/: cel.rs  property.rs
src/envoy/: mod.rs
src/filter/: descriptor_manager.rs  kuadrant_filter.rs  mod.rs  proposal_context.rs  root_context.rs
src/kuadrant/: context.rs
src/kuadrant/pipeline/: blueprint.rs  executor.rs  factory.rs
src/kuadrant/pipeline/tasks/: auth.rs  mod.rs  ratelimit.rs
src/kuadrant/pipeline/tasks/token_usage/: event_parser.rs
src/services/: dynamic.rs  mod.rs
src/services/dynamic/: converters.rs
src/tracing/: mod.rs
tests/: auth.rs  dynamic.rs  multi.rs
tests/util/: data.rs
vendor-protobufs/kuadrant/service/ratelimit/v1/: ratelimit.proto
