[package]
name = "wasm-shim"
version = "0.12.3-rc1"
edition = "2021"
authors = ["Alex Snaps <asnaps@redhat.com>", "Eguzki Astiz Lezaun <eguzki@redhat.com>", "Didier Di Cesare <dcesare@redhat.com>", "Adam Cattermole <acatterm@redhat.com>", "Rahul Anand <rahulanand16nov@gmail.com>"]
description = "Wasm module connecting envoy and authorino/limitador"
license = "Apache-2.0"
keywords = ["rate-limiting", "rate", "limiter", "envoy", "rls"]
categories = ["web-programming"]
homepage = "https://kuadrant.io"
repository = "https://github.com/Kuadrant/wasm-shim"
documentation = "https://kuadrant.io"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
log = "0.4"
prost = "0.14"
prost-types = "0.14"
radix_trie = "0.2.1"
const_format = "0.2.31"
cel = "0.12.0"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
proxy-wasm = { git = "https://github.com/Kuadrant/proxy-wasm-rust-sdk.git", branch = "kuadrant" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "std"] }
nom = { version = "8", default-features = false }
uuid = { version = "1.18.1", features = ["v4", "js"] }
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "trace"] }

[dev-dependencies]
serial_test = "2.0.0"
proxy-wasm-test-framework = { git = "https://github.com/Kuadrant/wasm-test-framework.git", branch = "kuadrant" }

[build-dependencies]
prost-build = "0.14"

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
